# reversi-engine

./: .gitignore  Cargo.toml  README.md  callgrind.out.1998178
examples/: opening-book.json.xz
src/: engine.rs  lib.rs  main.rs  openingbook.rs  tt.rs  tune.rs  utils.rs  zobrist.rs
src/cli/: args.rs
src/multiplayer/: api_client.rs  mod.rs  model.rs
