[package]
name = "reversi-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["multiplayer"]
# The multiplayer client pulls in ureq -> rustls -> ring, whose C code
# builds fail to link under `-Cprofile-generate` (ring's C objects
# reference `__gcov_*` symbols that aren't in the LLVM profile runtime
# Rust links against). Gating the client behind a feature lets PGO
# and other instrumented builds use `--no-default-features`.
#
# Empirical PGO result for the record: with
# `RUSTFLAGS="-C target-cpu=native"` preserved across both the
# instrumented and optimized builds and training on `--benchmark -s 8`
# (plus -s 7/9 variants), the resulting binary is within ±2% of the
# non-PGO `--release` build at d8/d9/d10. Not worth wiring into the
# default workflow, but the feature split is kept as a clean
# separation for any future instrumented-build work.
multiplayer = ["dep:ureq"]

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
rayon = "1.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3.0.0-rc5", features = ["json"], optional = true }
reversi_tools = { git = "https://github.com/sklochkov2/reversi-tools.git", tag = "v2.0.5" }
